<resources>
    <string name="app_name">TODO - List App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="time_to_productive">Time to be Productive</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="hello_peeps">Hello Peeps!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="write_title_here">Write title here</string>
    <string name="description">Description</string>
    <string name="write_description_here">Write description here</string>
    <string name="due_date">Due Date</string>
    <string name="choose_date">Choose date</string>
    <string name="choose_people">Write people</string>
    <string name="assign_to">Assign to</string>
</resources>